fix: transactions microservice fully functional
